# CardGame

./: .pre-commit-config.yaml  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.circleci/: config.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/src/certs/: README.md  cert.pem  key.pem
backend/src/config/: logger.ini
backend/src/mr_lim_card_game/: dependencies.py  main.py
backend/src/mr_lim_card_game/api/v1/: game.py  game_route.py  websocket_route.py
backend/src/mr_lim_card_game/models/: game.py  game_route.py
backend/src/mr_lim_card_game/services/: connection_manager.py  game_service.py  game_state_manager.py
backend/src/mr_lim_card_game/utils/: app_logger.py  id_generator.py  token_utils.py
backend/tests/: test_sample.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_game_models.py  test_game_service.py  test_game_state_manager.py  test_session_manager.py
frontend/: Dockerfile  Dockerfile.dev  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  theme.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/components/: Chat.tsx
frontend/src/app/pages/: LandingPage.tsx
frontend/src/components/: Chat.tsx  ChatMessageContainer.tsx
frontend/src/models/: ChatMessage.tsx
frontend/src/pages/: GamePage.tsx  LandingPage.tsx
frontend/src/theme/: index.ts
frontend/src/utils/: auth.ts  backend_service.ts
frontend/styles/: globals.css
frontend2/: next.config.ts  package-lock.json
frontend2/src/app/: globals.css
frontend2/src/app/components/: ChatMessageContainer.tsx
frontend2/src/app/hooks/: useResizeObserver.tsx
frontend2/src/app/utils/: auth.tsx
frontend2/src/models/: ChatMessage.ts
(+4 files in other folders)
