[project]
name = "mr-lim-card-game"
version = "0.1.0"
description = ""
authors = [
    {name = "khayweee"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "mr_lim_card_game", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
