[project]
name = "mr-lim-card-game"
version = "0.1.0"
description = ""
authors = [
    {name = "khayweee"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic (>=2.11.1,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
]

[tool.poetry]
packages = [{include = "mr_lim_card_game", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
flake8 = "^7.2.0"
black = "^25.1.0"
pre-commit = "^4.2.0"
pytest-asyncio = "^0.26.0"
httpx = "^0.28.1"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
      \.git
    | \.venv
)/
'''

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
